fixed styling on weekend and magazine sections, made them work on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -227,7 +227,6 @@ footer#site-footer{
 
 .container {
   &:first-of-type{
-    margin-top: 2%;
   }
   margin-top: 6%;
   display: table;
@@ -572,53 +571,101 @@ footer#site-footer{
 }
 
 section.category {
+  padding: 2em 0;
+
   clear: both;
   width: 100%;
-  padding: 2em 0;
   & > h2 {
     @extend %face-serif;
     font-style: italic;
-    font-weight: 600;
+    font-weight: 800;
     color: $dark-gray;
-    font-size: 2.75em;
+    font-size: 3em;
+    letter-spacing: 0.025em;
   }
   aside.category-jump {
   }
   &.magazine, &.weekend {
-    & > h2 {
-      color: white;
-      top: 104px;
-      right: 0;
-      position: relative;
-      z-index: 2;
-    }
+    
   } 
+}
+
+section.opinion {
+  margin-bottom: 75px;
 }
 
 a.link-wrap{
   display: block;
 }
 
-.cover-story {
-  width: 100%;
-  height: 500px;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url('../images/lux.png') no-repeat;
-  background-size: cover;
-  padding-top: 190px;
-  h1 {
-    color: white;
-    font-size: 60px;
-    @extend %face-serif;
+section.ytv {
+  margin-top: 0;
+
+  .container {
+    margin-top: 0;
   }
-  .byline, .time {
-    margin: 0 auto;
-    color: #ddd;
-  }
-  .byline {
-    padding-top: 10px;
+
+  h2 {
+    margin-bottom: 30px;
   }
 }
 
+section.magazine, section.weekend {
+  h2 {
+    color: white;
+    margin-bottom: -100px;
+    z-index: 1;
+  }
+}
+
+section.weekend {
+  .story-softcore-cover {
+    margin-bottom: -40px;
+  }
+}
+
+.story-softcore-cover {
+  overflow: hidden;
+  height: 500px;
+
+  .card-image {
+    z-index: -1;  
+  }
+
+  h1, .byline {
+    z-index: 1;
+  }
+
+  h1 {
+    margin-top: -1150px;
+    color: white;
+    font-size: 3em;
+    font-weight: 800;
+    letter-spacing: .05em;
+    @extend %face-serif;
+  }
+
+  .byline {
+    color: white;
+    margin-left: auto;
+    margin-top: 20px;
+  }
+
+  &::after {
+    @include bg-gradienter (( to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100% ));
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    content: "";
+    position: absolute;
+  }
+}
+
+.section-wrap {
+  padding: 5px 0 50px 0;
+  background-color: black;
+}
 
 /// ARTICLE PAGE STUFF
 @import "article";
@@ -631,11 +678,18 @@ a.link-wrap{
 /// RESPONSIVE STUFF
 
 @media(max-width:980px) {
+
+
   section.category {
     width: 710px;
     margin: 0 auto;
     margin-top: 3%;
   }
+
+  section.magazine, section.weekend {
+    width: 100%;
+  }
+
   .card {
       width: $card-width;
     &.story {
@@ -652,14 +706,22 @@ a.link-wrap{
       }
     }
   }
+
 }
 
 @media(max-width:710px) {
+
+  
   section.category {
     width: 480px;
     margin: 0 auto;
     margin-top: 3%;
   }
+
+  section.magazine, section.weekend {
+    width: 100%;
+  }
+
   .card {
     &.story {
       width: $card-width;
@@ -697,11 +759,18 @@ a.link-wrap{
      }
     }
   }
+}
+
+  section.magazine, section.weekend {
+    width: 100%;
   }
 }
 
 
 @media(max-width:480px) {
+
+  
+
   #site-header, #xc-web{
     display: none;
   }
@@ -715,6 +784,26 @@ a.link-wrap{
     text-decoration: none;
     }
   }
+
+
+  section.magazine, section.weekend {
+    width: 100%;
+  }
+
+  .story-softcore-cover {
+    h1 {
+      font-size: 2.5em;
+
+    }
+
+    .byline {
+      margin-top: 10px;
+    }
+
+  }
+
+  
+
   .card {
     width: 100%;
     &.story-simple, &.story-opinion {
@@ -747,8 +836,7 @@ a.link-wrap{
       }
     }
     &.story-kahuna{
-      width: 120%;
-      left: -10%;
+      width: 100%;
       height: $card-height;
       background-color: white;
       .card-image {
@@ -772,53 +860,10 @@ a.link-wrap{
   }
 }
 
-.cover-story {
-  height: 600px;
-  overflow: hidden;
-  @include bg-gradienter (( to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.96) 100% ));
-
-
-  img {
-    width: 100%;
-    background-size: cover;  
-    z-index: -1;
-  }
-
-  h1 {
-    color: white;
-    font-size: 60px;
-    margin-top: -47% !important;
-    @extend %face-serif;
-  }
-
-  .byline, .time {
-    margin: 0 auto;
-    color: #ddd;
-  }
-  .byline {
-    padding-top: 10px;
-    &.cross-campus{
-      opacity: 0.9;
-      .xc-content{
-        height: 100%;
-      }
-      #xc{
-        margin: 0 0 0 0;
-        width: 100%;
-        text-align: center;
-        height: 50px;
-        p{
-          margin-top: -5px;
-        }
-      }
-    }
-  }
-}
-
 
 header#site-header {
   background-color: white;
-  margin-bottom: -30px;
+  margin-bottom: -100px;
   padding: 10px 0 0;
   a {
     text-decoration: none;
@@ -833,7 +878,7 @@ header#site-header {
     margin: 0 auto 10px;
   }
   nav#site-navigation { 
-    background-color: white;    
+    background-color: white;   
     text-align: center;
     z-index:100;
     border-bottom: 1px solid #ddd;
